# a-maze-ing

./: Makefile  README.md  a_maze_ing.py  config.conf  config.txt  maze_output.txt  output.txt  test.py  test.sh  todo.org
ex0/: data_processor.py
ex1/: data_stream.py
ex2/: data_pipeline.py
mazegen/: __init__.py
mazegen/maze_generator/: __init__.py  generator.py  huntandkill.py  input_validator.py
mazegenerator/: README.md  __init__.py  pyproject.toml
mazegenerator/mazegenerator/: __init__.py  generator.py  huntandkill.py
src/: __init__.py  input_validation.py  mazesolver.py  parsers.py
src/image/: papaya_whip.xpm  rosy_taupe.xpm  stone_brown.xpm
src/solver/: __init__.py  a_stars_solver.py  astars_solver.py  base_solver.py  bfs_solver.py  dfs_solver.py
