[tool.poetry]
name = "mazegenerator"
version = "0.1.0"
description = "A simple maze generator"
authors = ["nyramana <nyramana@student.42antananarivo.mg>", "tiana-an <tiana-an@student.42antananarivo.mg>"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
